--- a/.github/workflows/ramps.yml
+++ b/.github/workflows/ramps.yml
@@ -98,6 +98,16 @@ jobs:
           firmware*
           Marlin_*.zip
 
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: target/release/mything
+        asset_name: mything
+        tag: ${{ github.ref }}
+        overwrite: true
+        body: "This is my release text"
+
     - name: Upload Marlin-${{ matrix.machine }}-${{ matrix.branch }}.zip to release
       if: ${{ github.event_name == 'release' }}
       uses: actions/upload-release-asset@v1
