--- a/.github/workflows/ramps.yml
+++ b/.github/workflows/ramps.yml
@@ -47,6 +47,7 @@ jobs:
     - name: Select Python 3.10
       uses: actions/setup-python@v1
       with:
+        node-version: 16
         python-version: '3.10' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
