--- a/.github/workflows/ramps.yml
+++ b/.github/workflows/ramps.yml
@@ -1,9 +1,7 @@
 name: ramps
 
 on:
-  concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    
+   
   schedule:
     # At 12:15 each day. No idea what time zone this is...
     - cron:  '15 12 * * *'
@@ -44,15 +42,12 @@ jobs:
     steps:
 
     # First, cancel unfinished jobs.
-#    - uses: technote-space/auto-cancel-redundant-job@v1
-    
-    
-   
+    - uses: technote-space/auto-cancel-redundant-job@v1
     
 
     # Based on .github/workflows/test-builds.yml
     - name: Select Python 3.10
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         node-version: 16
         python-version: '3.10' # Version range or exact version of a Python version to use, using semvers version range syntax.
@@ -64,10 +59,10 @@ jobs:
         platformio update
 
     - name: Check out MarlinBuilder
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Check out MarlinFirmware
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         repository: MarlinFirmware/Marlin
         ref: ${{ matrix.branch }}
@@ -84,7 +79,7 @@ jobs:
         src/core/zip-marlin
 
     - name: Upload src artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.machine }}-${{ matrix.branch }}
         path: |
@@ -99,7 +94,7 @@ jobs:
         src/core/zip-release
 
     - name: Upload built artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.machine }}-${{ matrix.branch }}
         path: |
